patterns/core/ProductList/productList.styl
$breakpoint-small = 400px
$breakpoint-medium = 650px
$breakpoint-large = 1000px
$breakpoint-huge = 1150px

.product-list
  padding 0 1.5rem
  margin-top 2.4rem

  @media (min-width $breakpoint-large)
    padding 0 2rem

.product-list__actions
  display flex
  margin-bottom 1.8rem

.product-list__wrapper
  display flex

.product-list__list
  display grid
  grid-template-columns 1fr
  grid-gap 2.4rem 0
  width 100%
  transition opacity 100ms ease-in

  &--loading
    opacity 0.2

  @media (min-width $breakpoint-small)
    // see https://stackoverflow.com/a/52861514
    grid-template-columns repeat(2, minmax(0,1fr))

  @media (min-width $breakpoint-medium)
    grid-template-columns repeat(3, minmax(0,1fr))

  @media (min-width $breakpoint-huge)
    grid-template-columns repeat(4, minmax(0,1fr))

.product-item
  border-top 1px solid var(--neutral-40)
  padding 2.3rem 1rem 0 // top = 2.4rem - 1px border

.product-item__image
  display flex
  justify-content center

  img
    max-width 100%
    max-height 22.8rem

.product-item__variants
  display flex
  justify-content center
  padding 0.6rem 0 1.2rem

.product-item__variant
  height 2.4rem
  width 2.4rem
  border 2px solid var(--neutral-00)
  border-radius 50%
  box-shadow 0 0 0 1px var(--neutral-90)
  margin 0 0.3rem

.product-item__title
  text-align center

.product-item__manufacturer
  display block
  font-size 1.3rem
  font-weight var(--font-weight-semi-bold)
  letter-spacing 0.3rem
  line-height 1.2rem
  color var(--neutral-50)
  text-transform uppercase
  text-align center
  padding 0.2rem 0 0.4rem
  margin 0.6rem 0

.product-item__shortdesc
  max-height 6rem // 3 lines = 3 * 1.8rem (line-height) + 0.6rem (padding-top)
  overflow hidden
  text-align center
  // Be careful not to override padding-top/bottom from <Copytext>
  padding-left 1.5rem
  padding-right 1.5rem

.product-item__prices
  text-align center
  padding 0.1rem 0 0.5rem
  margin-top 0.6rem

.product-item__price
  font-size 1.7rem
  font-weight var(--font-weight-semi-bold)
  line-height 2.4rem
  letter-spacing 0.025rem

  &--reduced
    text-decoration line-through
    margin-right 1.2rem

  &--current
    color var(--reduced-price)

.product-item__price-hint
  color var(--neutral-50)
  line-height 1.8rem
  text-align center
  padding 0.5rem 0 0.1rem

  span + span
    margin-left 1rem
    position relative

    &:before
      display block
      content: "\00b7"
      position absolute
      top 0
      left -0.7rem

.product-item__actions
  margin-top 1.2rem
  text-align center

.product-list__filter-button
  @media (min-width $breakpoint-large)
    display none

  &--active
    .button__text
      margin-right 0.4rem

.product-list__filter-reset-button
  display none

  @media (min-width $breakpoint-large)
    display inline-flex

  .icon
    flex-basis 2rem

.product-list__active-filter-hint
  background var(--secondary)
  color var(--neutral-00)
  border-radius 12px
  font-size 1.1rem
  font-weight var(--font-weight-semi-bold)
  line-height 1.5rem
  letter-spacing 0.024rem
  padding 0.35rem 0.7rem
  position relative
  top -1px
  left 4px

.product-list__sorter
  margin-left auto

  .dropdown__listbox
    min-width 20rem

.product-list__pagination
  grid-column 1 / -1 // always span all available columns
  display flex
  align-items center
  width 100%
  margin-top 2.4rem

  .button + .button
    margin-left 0.6rem

.product-list__pagination-text
  margin 0 auto

.product-list__banner
  picture
    display flex
    height 100%

  img
    width 100%
    height 100% // Safari-Fix
    object-fit cover

